# estahr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: hash.rs  lib.rs
src/hash/: mod.rs
src/strings/: distance.rs  mod.rs
tests/: large_1800.txt  lib.rs  small_600.txt
