[package]
name = "estahr"
version = "0.1.0"
authors = ["Rahul Thomas <rapidclock@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/rapidclock/estahr"
documentation = "https://docs.rs/estahr"
keywords = [
	"strings",
	"str",
	"stringutils",
	"string-utils",
	"hashing",
	"file-hashing",
	"string hashing",
	"distance"
]
categories = ["algorithms", "cryptography"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.8.1"
hex = "0.4.0"
md-5 = "0.8.0"
sha2 = "0.8.1"
sha3 = "0.8.2"
blake2 = "0.8.1"
blake3 = {version = "0.1.3", features = ["rayon"]}
